# server/server.js
@@ -1,8 +1,11 @@
 import express, { json } from "express";
 import dotenv from "dotenv";
 import connectDB from "./config/db.js";
+
 import userRouter from "./routes/UserRoute.js";
 import authRouter from "./routes/AuthRoute.js"
+import contactRouter from "./routes/ContactRoute.js";
+
 import swaggerUi from "swagger-ui-express";
 import swaggerDocument from "./config/swagger.json" with {type: "json"};
 
@@ -23,6 +26,7 @@ server.get('/', (req, res) => {
 
 server.use("/", userRouter);
 server.use("/auth", authRouter);
+server.use("/contacts", contactRouter);
 
 server.listen(process.env.PORT, () => {
   console.log(`Serveur écoute le port ${process.env.PORT}`);
